[V8] FileList cannot be accessed via index in Chromium. https://bugs.webkit.org/show_bug.cgi?id=28883

Reviewed by Dimitri Glazkov.

Tested by clipboard-file-access.html.

* WebCore.gypi:
* bindings/v8/V8DOMWrapper.cpp:
(WebCore::V8DOMWrapper::getTemplate):
* bindings/v8/custom/V8CustomBinding.h:
* bindings/v8/custom/V8FileListCustom.cpp: Added.

Canonical link: https://commits.webkit.org/39523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47947 268f45cc-cd09-0410-ab3c-d52691b4dbfc